[gd_scene load_steps=3 format=3 uid="uid://c6nwveqo000dl"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1"]
[ext_resource type="Script" uid="uid://cs3mhm82x5ejk" path="res://sources/gui/Quit.gd" id="3"]

[node name="Panel" type="PanelContainer"]
custom_minimum_size = Vector2(290, 120)
offset_right = 280.0
offset_bottom = 120.0
theme = ExtResource("1")
script = ExtResource("3")
blockActions = true

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/line_spacing = 0
text = "Any time spent in the real world is less time spent in the mana world!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
language = "en_GB"

[node name="Container" type="MarginContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 3

[node name="ButtonChoice" type="HBoxContainer" parent="Margin/VBoxContainer/Container"]
layout_mode = 2
alignment = 2

[node name="Quit" type="Button" parent="Margin/VBoxContainer/Container/ButtonChoice"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"LargeButton"
text = "Quit"

[node name="LogOut" type="Button" parent="Margin/VBoxContainer/Container/ButtonChoice"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"LargeButton"
text = "Log Out"

[node name="Stay" type="Button" parent="Margin/VBoxContainer/Container/ButtonChoice"]
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"LargeButton"
text = "Stay"

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="draw" from="Margin/VBoxContainer/Container/ButtonChoice" to="." method="_on_window_draw"]
[connection signal="pressed" from="Margin/VBoxContainer/Container/ButtonChoice/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Container/ButtonChoice/LogOut" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Container/ButtonChoice/Stay" to="." method="_on_stay_pressed"]
